--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
       </nav>
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
-
+            <div class="col-md-8 main-section">
+                <div class="row">
+                    <h1>About Alexandra Eesley</h1>
+                </div>
+                <div class="row">
+                    <div class="media">
+                        <img src="..." class="align-self-start mr-3" alt="...">
+                        <div class="media-body">
+                          <h5 class="mt-0">Top-aligned media</h5>
+                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                          <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        </div>
+                      </div>
+                </div>
             </div>
             <div class="col-md-4">
-
             </div>
         </div>
     </div>
