--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </div>
       </nav>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 main-section">
                 <div class="row">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="row">
                     <div class="media">
-                        <img src="..." class="align-self-start mr-3" alt="...">
+                        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGx6vuUusp6Kg/profile-displayphoto-shrink_200_200/0?e=1603324800&v=beta&t=xu8LF7R2tYcnF5FylPvh0KMpzPreriiBvr_u_6vZmQo" class="align-self-start mr-3" alt="Alexandra Eesley Headshot">
                         <div class="media-body">
                           <h5 class="mt-0">Top-aligned media</h5>
                           <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
