--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 main-section">
-                <div class="row">
+              <div class="jumbotron">
+                <h1 class="display-4">Alexandra Eesley</h1>
+                <p class="lead"></p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+              </div>
+                <!-- <div class="row">
                     <h1>About Alexandra Eesley</h1>
                 </div>
                 <div class="row">
@@ -49,7 +55,7 @@
                           <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         </div>
                       </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-md-4">
             </div>
