--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,20 @@
           </ul>
         </div>
       </nav>
-    PORTFOLIO TEST CONTENT
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8 main-section">
+              <div class="jumbotron">
+                <h1 class="display-4">Portfolio</h1>
+                <p class="lead"></p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+              </div>
+ 
+            </div>
+            <div class="col-md-4">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
