added background image using internal css on each page of portfolio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 <!-- Link to my CSS sheet -->
 <link rel="stylesheet" href="style.css">
-    
+    <style>
+    body {
+      background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg);
+    }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,6 +39,8 @@
         </div>
       </nav>
     <div class="container-fluid">
+      <!-- <div style="https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg"></div> -->
+      <!-- <img src="https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg" class="background-image" alt="multi colored background image"> -->
         <div class="row">
             <div class="col-md-8 main-section">
               <div class="jumbotron">
