--- a/index.html
+++ b/index.html
@@ -62,5 +62,10 @@
             </div>
         </div>
     </div>
+    <div class="footer-top-row">
+    </div>
+    <footer>
+      <p class="footer-text">© Copyright</p>
+    </footer>
 </body>
 </html>
