changed footer to sticky

--- a/contact.html
+++ b/contact.html
@@ -68,5 +68,11 @@
             </div>
         </div>
     </div>
+  </div>
+  <div class="footer-top-row">
+  </div>
+  <footer>
+    <p class="footer-text">© Copyright</p>
+  </footer>
 </body>
 </html>
