--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
                   <div class="media">
                     <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGx6vuUusp6Kg/profile-displayphoto-shrink_200_200/0?e=1603324800&v=beta&t=xu8LF7R2tYcnF5FylPvh0KMpzPreriiBvr_u_6vZmQo" class="align-self-start mr-3" alt="Alexandra Eesley Headshot">
                     <div class="media-body">
-                      <h5 class="mt-0">Top-aligned media</h5>
-                      <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                      <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                      <p>Alexandra Eesley is the owner and resident digital marketing expert at Eesley Consulting. She has a passion for fixing problems, building creative solutions, and finding the efficiencies that help that her clients from where they are, to where they want to be.</p>
+                      <p>In her free time, Eesley spends time with her husband and two daughters, volunteers her skills to serve her community, and lets her creativity flow with whatever passion projects she's currently dreaming up.</p>
+                      <p>Eesley is currently enrolled in Northwestern University's Coding Bootcamp. She's looking forward to expanding her skills and serving new audiences.</p>
                     </div>
                   </div>
                 </div>
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
               </div>
             </div>
             <div class="col-md-4">
