added assets folder with portfolio images, added column structure and two images to portfolio html page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,18 @@
                 <h1 class="display-4">Portfolio</h1>
                 <p class="lead"></p>
                 <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <div class="row-1">
+                    <div class="col-md-6">
+                      <img src="assets/1.jpg" alt="">
+                    </div>
+                    <div class="col-md-6">
+                      <img src="assets/2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row-2">
+                </div>
+                <div class="row-3">
+                </div>
               </div>
  
             </div>
