added 5 portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,17 +44,28 @@
                 <h1 class="display-4">Portfolio</h1>
                 <p class="lead"></p>
                 <hr class="my-4">
-                <div class="row-1">
-                    <div class="col-md-6">
-                      <img src="assets/1.jpg" alt="">
-                    </div>
-                    <div class="col-md-6">
-                      <img src="assets/2.jpg" alt="">
-                    </div>
-                </div>
+              <div class="row-1">
+                  <div class="col-md-6">
+                      <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
+                  </div>
+                  <div class="col-md-6">
+                      <img src="assets/2.jpg" alt="community education event">
+                  </div>
+              </div>
                 <div class="row-2">
+                    <div class="col-md-6">
+                      <img src="assets/3.jpg" alt="3 years in business">
+                    </div>
+                    <div class="col-md-6">
+                      <img src="assets/4.jpg" alt="leadership event">
+                    </div>
                 </div>
                 <div class="row-3">
+                  <div class="col-md-6">
+                    <img src="assets/5.jpg" alt="community service project">
+                  </div>
+                  <div class="col-md-6">
+                  </div>
                 </div>
               </div>
  
