added porfolio image class to add margin spacing between images

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,20 +49,20 @@
                       <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
                   </div>
                   <div class="col-md-6">
-                      <img src="assets/2.jpg" alt="community education event">
+                      <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
                   </div>
               </div>
                 <div class="row-2">
                     <div class="col-md-6">
-                      <img src="assets/3.jpg" alt="3 years in business">
+                      <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
                     </div>
                     <div class="col-md-6">
-                      <img src="assets/4.jpg" alt="leadership event">
+                      <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
                     </div>
                 </div>
                 <div class="row-3">
                   <div class="col-md-6">
-                    <img src="assets/5.jpg" alt="community service project">
+                    <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
                   </div>
                   <div class="col-md-6">
                   </div>
