--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                 <h1 class="display-4">Portfolio</h1>
                 <p class="lead"></p>
                 <hr class="my-4">
-              <div class="row-1">
+              <div class="row">
                   <div class="col-md-6">
                       <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
                   </div>
@@ -52,7 +52,7 @@
                       <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
                   </div>
               </div>
-                <div class="row-2">
+                <div class="row">
                     <div class="col-md-6">
                       <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
                     </div>
@@ -60,7 +60,7 @@
                       <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
                     </div>
                 </div>
-                <div class="row-3">
+                <div class="row">
                   <div class="col-md-6">
                     <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
                   </div>
