changed nav bar to try and get it list to left side of page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand font-weight-bold" href="#">Alexandra Eesley</a>
+      <ul class="nav-list">
+          <li><a class="contact" href="contact.html">Contact</a>
+          </li>
+          <li><a class="contact" href="portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="contact" href="index.html">About</a>
+          </li>
+      </ul>
+  </nav>
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Alexandra Eesley</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,7 +48,7 @@
             </li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 main-section">
