changed footing wording

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <footer>
-      <p class="footer-text">© Copyright</p>
+      <p class="footer-text">© Copyright 2020 Alexandra Eesley</p>
     </footer>
 </body>
 </html>
