--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
                 <h1 class="display-4">Alexandra Eesley</h1>
                 <p class="lead"></p>
                 <hr class="my-4">
-                <div class="row">
-                  <div class="media">
-                    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGx6vuUusp6Kg/profile-displayphoto-shrink_200_200/0?e=1603324800&v=beta&t=xu8LF7R2tYcnF5FylPvh0KMpzPreriiBvr_u_6vZmQo" class="align-self-start mr-3" alt="Alexandra Eesley Headshot">
-                    <div class="media-body">
-                      <p>Alexandra Eesley is the owner and resident digital marketing expert at Eesley Consulting. She has a passion for fixing problems, building creative solutions, and finding the efficiencies that help that her clients from where they are, to where they want to be.</p>
-                      <p>In her free time, Eesley spends time with her husband and two daughters, volunteers her skills to serve her community, and lets her creativity flow with whatever passion projects she's currently dreaming up.</p>
-                      <p>Eesley is currently enrolled in Northwestern University's Coding Bootcamp. She's looking forward to expanding her skills and serving new audiences.</p>
-                    </div>
-                  </div>
-                </div>
+                <section class="row">
+                  <!-- <div class="media"> -->
+                  <section>
+                    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGx6vuUusp6Kg/profile-displayphoto-shrink_200_200/0?e=1603324800&v=beta&t=xu8LF7R2tYcnF5FylPvh0KMpzPreriiBvr_u_6vZmQo" class="align-self-start mr-3" alt="Alexandra Eesley Headshot" id="aboutimg">
+                  <!-- <div class="media-body"> -->
+                    <p>Alexandra Eesley is the owner and resident digital marketing expert at Eesley Consulting. She has a passion for fixing problems, building creative solutions, and finding the efficiencies that help that her clients from where they are, to where they want to be.</p>
+                    <p>In her free time, Eesley spends time with her husband and two daughters, volunteers her skills to serve her community, and lets her creativity flow with whatever passion projects she's currently dreaming up.</p>
+                    <p>Eesley is currently enrolled in Northwestern University's Coding Bootcamp. She's looking forward to expanding her skills and serving new audiences.</p>
+                  </section>
+                </section>
+                  <!-- </div>
+                </div> -->
               </div>
             </div>
             <div class="col-md-4">
