--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse nav-align-custom" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -37,38 +37,38 @@
           </ul>
         </div>
       </nav>
-      <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 main-section">
-              <div class="jumbotron">
+      <main class="container-fluid">
+        <section class="row">
+            <section class="col-md-8 main-section">
+              <section class="jumbotron">
                 <h1 class="display-4">Contact</h1>
                 <p class="lead"></p>
                 <hr class="my-4">
                 <form>
-                  <div class="form-group">
+                  <section class="form-group">
                     <label for="exampleInputEmail1">Name</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     <small id="emailHelp" class="form-text text-muted"></small>
-                  </div>
-                  <div class="form-group">
+                  </section>
+                  <section class="form-group">
                     <label for="exampleInputPassword1">Email</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
-                  </div>
-                  <div class="form-group">
+                  </section>
+                  <section class="form-group">
                     <label for="exampleFormControlTextarea1">Message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                  </div>
-                  <div class="form-group form-check">
-                  </div>
+                  </section>
+                  <section class="form-group form-check">
+                  </section>
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
-              </div>
-            </div>
-            <div class="col-md-4">
-            </div>
-        </div>
-    </div>
-  </div>
+              </section>
+            </section>
+            <aside class="col-md-4">
+            </aside>
+        </section>
+    </section>
+  </main>
   <footer>
     <p class="footer-text">© Copyright</p>
   </footer>
