--- a/portfolio.html
+++ b/portfolio.html
@@ -1,82 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Bootstrap CSS link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!-- Bootstrap JS link -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
-<style>
-  body {
-    background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg);
-  }
-  </style> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- Bootstrap CSS link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- Bootstrap JS link -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg);
+    }
+  </style>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Alexandra Eesley</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 main-section">
-              <div class="jumbotron">
-                <h1 class="display-4">Portfolio</h1>
-                <p class="lead"></p>
-                <hr class="my-4">
-              <div class="row">
-                  <div class="col-md-6">
-                      <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
-                  </div>
-                  <div class="col-md-6">
-                      <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
-                  </div>
-              </div>
-                <div class="row">
-                    <div class="col-md-6">
-                      <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
-                    </div>
-                    <div class="col-md-6">
-                      <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
-                    </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
-                  </div>
-                  <div class="col-md-6">
-                  </div>
-                </div>
-              </div>
- 
-            </div>
-            <div class="col-md-4">
-            </div>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Alexandra Eesley</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse nav-align-custom" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
+      </ul>
     </div>
-  </div>
+  </nav>
+  <main class="container-fluid">
+    <section class="row">
+      <section class="col-md-8 main-section">
+        <section class="jumbotron">
+          <h1 class="display-4">Portfolio</h1>
+          <p class="lead"></p>
+          <hr class="my-4">
+          <section class="row">
+            <section class="col-md-6">
+              <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
+            </section>
+            <section class="col-md-6">
+              <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
+            </section>
+          </section>
+          <section class="row">
+            <section class="col-md-6">
+              <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
+            </section>
+            <section class="col-md-6">
+              <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
+            </section>
+          </section>
+          <section class="row">
+            <section class="col-md-6">
+              <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
+            </section>
+            <section class="col-md-6">
+            </section>
+          </section>
+        </section>
+
+      </section>
+      <aside class="col-md-4">
+      </aside>
+    </section>
+    </section>
+  </main>
   <footer>
     <p class="footer-text">© Copyright</p>
   </footer>
 </body>
+
 </html>
