testing image relative path fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           <hr class="my-4">
           <section class="row">
             <section class="col-md-6">
-              <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
+              <img src="../assets/1.jpg" class="portfolio-image" alt="podcast recording">
             </section>
             <section class="col-md-6">
               <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
