--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Alexandra Eesley</title>
   <!-- Bootstrap CSS link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -56,23 +56,23 @@
           <hr class="my-4">
           <section class="row">
             <section class="col-md-6">
-              <img src="../assets/1.jpg" class="portfolio-image" alt="podcast recording">
+              <img src="1.jpg" class="portfolio-image" alt="podcast recording">
             </section>
             <section class="col-md-6">
-              <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
-            </section>
-          </section>
-          <section class="row">
-            <section class="col-md-6">
-              <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
-            </section>
-            <section class="col-md-6">
-              <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
+              <img src="2.jpg" class="portfolio-image" alt="community education event">
             </section>
           </section>
           <section class="row">
             <section class="col-md-6">
-              <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
+              <img src="3.jpg" class="portfolio-image" alt="3 years in business">
+            </section>
+            <section class="col-md-6">
+              <img src="4.jpg" class="portfolio-image" alt="leadership event">
+            </section>
+          </section>
+          <section class="row">
+            <section class="col-md-6">
+              <img src="5.jpg" class="portfolio-image" alt="community service project">
             </section>
             <section class="col-md-6">
             </section>
