--- a/portfolio.html
+++ b/portfolio.html
@@ -56,23 +56,23 @@
           <hr class="my-4">
           <section class="row">
             <section class="col-md-6">
-              <img src="1.jpg" class="portfolio-image" alt="podcast recording">
+              <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
             </section>
             <section class="col-md-6">
-              <img src="2.jpg" class="portfolio-image" alt="community education event">
-            </section>
-          </section>
-          <section class="row">
-            <section class="col-md-6">
-              <img src="3.jpg" class="portfolio-image" alt="3 years in business">
-            </section>
-            <section class="col-md-6">
-              <img src="4.jpg" class="portfolio-image" alt="leadership event">
+              <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
             </section>
           </section>
           <section class="row">
             <section class="col-md-6">
-              <img src="5.jpg" class="portfolio-image" alt="community service project">
+              <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
+            </section>
+            <section class="col-md-6">
+              <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
+            </section>
+          </section>
+          <section class="row">
+            <section class="col-md-6">
+              <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
             </section>
             <section class="col-md-6">
             </section>
