adding portfolio project photos and making each image link to the respective website

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,23 +56,33 @@
           <hr class="my-4">
           <section class="row">
             <section class="col-md-6">
-              <img src="assets/1.jpg" class="portfolio-image" alt="podcast recording">
+              <a href="https://k1te-m.github.io/Project-1-Restaurant-Roulette/">
+              <img src="assets/app.png" class="portfolio-image" alt="podcast recording">
+              </a>
             </section>
             <section class="col-md-6">
-              <img src="assets/2.jpg" class="portfolio-image" alt="community education event">
-            </section>
-          </section>
-          <section class="row">
-            <section class="col-md-6">
-              <img src="assets/3.jpg" class="portfolio-image" alt="3 years in business">
-            </section>
-            <section class="col-md-6">
-              <img src="assets/4.jpg" class="portfolio-image" alt="leadership event">
+              <a href="https://aeesley.github.io/weather-dashboard-hw/">
+              <img src="assets/weather.png" class="portfolio-image" alt="community education event">
+              </a>
             </section>
           </section>
           <section class="row">
             <section class="col-md-6">
-              <img src="assets/5.jpg" class="portfolio-image" alt="community service project">
+              <a href="https://aeesley.github.io/code-quiz-hw/">
+              <img src="assets/quiz.png" class="portfolio-image" alt="3 years in business">
+              </a>
+            </section>
+            <section class="col-md-6">
+              <a href="https://aeesley.github.io/day-planner-hw/">
+              <img src="assets/planner.png" class="portfolio-image" alt="leadership event">
+              </a>
+            </section>
+          </section>
+          <section class="row">
+            <section class="col-md-6">
+              <a href="https://aeesley.github.io/responsive-portfolio-hw/">
+              <img src="assets/portfolio.png" class="portfolio-image" alt="community service project">
+              </a>
             </section>
             <section class="col-md-6">
             </section>
