another portfolio update with additional projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,39 +56,66 @@
           <hr class="my-4">
           <section class="row">
             <section class="col-md-6">
+              <a href="https://dry-oasis-44384.herokuapp.com/">
+              <img src="assets/veguru.png" class="portfolio-image" alt="veguru-app">
+              </a>
+            </section>
+            <section class="col-md-6">
               <a href="https://k1te-m.github.io/Project-1-Restaurant-Roulette/">
-              <img src="assets/app.png" class="portfolio-image" alt="podcast recording">
+              <img src="assets/app.png" class="portfolio-image" alt="restaurant-roulette-app">
+              </a>
+            </section>
+          <section class="row">
+            <section class="col-md-6">
+              <a href="https://floating-crag-94174.herokuapp.com/">
+              <img src="assets/burger-app.png" class="portfolio-image" alt="burger-app">
               </a>
             </section>
             <section class="col-md-6">
               <a href="https://aeesley.github.io/weather-dashboard-hw/">
-              <img src="assets/weather.png" class="portfolio-image" alt="community education event">
+              <img src="assets/weather.png" class="portfolio-image" alt="weather-app">
+              </a>
+            </section>
+          </section>
+          <section class="row">
+            <section class="col-md-6">
+              <a href="https://github.com/aeesley/mysql-employee-tracker-hw">
+              <img src="assets/employee-db.png" class="portfolio-image" alt="employee-database">
+              </a>
+            </section>
+            <section class="col-md-6">
+              <a href="https://github.com/aeesley/employee-summary-engine-hw">
+              <img src="assets/team-structure.png" class="portfolio-image" alt="team-structure">
               </a>
             </section>
           </section>
           <section class="row">
             <section class="col-md-6">
               <a href="https://aeesley.github.io/code-quiz-hw/">
-              <img src="assets/quiz.png" class="portfolio-image" alt="3 years in business">
+              <img src="assets/quiz.png" class="portfolio-image" alt="code-quiz-project">
               </a>
             </section>
             <section class="col-md-6">
-              <a href="https://aeesley.github.io/day-planner-hw/">
-              <img src="assets/planner.png" class="portfolio-image" alt="leadership event">
+              <a href="https://github.com/aeesley/express-note-taker-hw">
+              <img src="assets/note-taker.png" class="portfolio-image" alt="note-taker">
               </a>
             </section>
           </section>
           <section class="row">
             <section class="col-md-6">
+              <a href="https://aeesley.github.io/day-planner-hw/">
+              <img src="assets/planner.png" class="portfolio-image" alt="day-planner">
+              </a>
+            </section>
+            <section class="col-md-6">
               <a href="https://aeesley.github.io/responsive-portfolio-hw/">
-              <img src="assets/portfolio.png" class="portfolio-image" alt="community service project">
+              <img src="assets/portfolio.png" class="portfolio-image" alt="portfolio">
               </a>
             </section>
             <section class="col-md-6">
             </section>
           </section>
         </section>
-
       </section>
       <aside class="col-md-4">
       </aside>
